@@ -44,6 +44,7 @@ class C_Feed extends B_Controller
         $blog_hash = $this->request()->blog;
         $user_id = $this->session()->user_profile_id;
 
+        $this->session()->user_blog_hash = $blog_hash;
         $this->view()->feeds = UserBlogFeed::partialByBlogAndUser($blog_hash, $user_id);
     }
 
