@@ -4,9 +4,10 @@ $(document).ready(function()
     var middle_content = $("#middlecontent");
     var bottom_bar = $("#bottombar");
     var queue_list_bar = $("#queuelistbar");
-
     var queue_display = 0; // 0 none | 1 half | 2 max
     var queue_height_control = $("#bottomrightbar span.hctl");
+    var active_request = false;
+    var current_blog = null;
 
     /* DISPLAY FUNCTIONS */
 
@@ -17,6 +18,11 @@ $(document).ready(function()
         image: "<?php B_Helper::img_src('spinner.gif') ?>",
         message: "... <?php echo $this->translation()->application_loading ?>"
     });
+
+    function set_active_request(b)
+    {
+        ((active_request = b) == true) ? $.b_spinner_start() : $.b_spinner_stop();
+    }
 
     /* window update / maximize containers */
 
@@ -77,6 +83,71 @@ $(document).ready(function()
 
     <?php endif ?>
 
+    /* error */
+
+    function err()
+    {
+        alert("<?php echo $this->translation()->server_error ?>");
+    }
+
+    /* dashboard actions */
+
+    function dashboard_msg(m)
+    {
+        alert(m);
+    }
+
+    function feed_item_populate(items)
+    {
+    }
+
+    function feed_populate(feeds)
+    {
+        if(feeds.length > 0)
+        {
+            middle_content.html("");
+            feeds.each(function()
+            {
+                _feed = $(this).find('feed').text();
+                _title = $(this).find('feed_title').text();
+
+                _div = "<div class=\"feeditem\" " +
+                       "feed=\"" + _feed + "\">" + _title + "</div>";
+
+                middle_content.append(_div);
+            });
+        }
+        else
+        {
+            middle_content.html("<p><?php echo $this->translation()->no_registered_feeds ?></p>");
+        }
+    }
+
+    function feed_list()
+    {
+        $.ajax
+        ({
+            type: "GET",
+            url: "<?php B_Helper::url('feed', 'list') ?>",
+            dataType: "xml",
+            data: { blog: current_blog },
+            beforeSend: function()
+            {
+                set_active_request(true);
+            },
+            complete: function()
+            {
+                set_active_request(false);
+            },
+            success: function (xml)
+            {
+                d = $(xml).find('data');
+                feed_populate(d.find('feeds').children());
+            },
+            error: function () { err(); }
+        });
+    }
+
     /* EVENTS */
 
     $(window).resize(function()
@@ -89,4 +160,26 @@ $(document).ready(function()
         queue_display = (queue_display < 2) ? queue_display + 1 : 0;
         window_update();
     });
+    
+    $("select[name='bloglst']").change(function()
+    {
+        set_blog();
+    });
+
+    /* INIT */
+
+    /* set blog */
+
+    function set_blog()
+    {
+        <?php if(count($this->blogs) == 1) : ?>
+        current_blog = $("#blogcur").val();
+        <?php elseif(count($this->blogs) > 1) : ?>
+        current_blog = $("select[name='bloglst'] > option:selected").val();
+        <?php endif ?>
+
+        feed_list();
+    }
+
+    set_blog();
 });
