@@ -28,5 +28,6 @@ HORAS TRABALHADAS: 6h
 - Exibicao de URL na listagem de feeds
 - Inclusao de listagem de blogs
 - Ajustes no controller Profile e model UserProfile
+- Inclusao de listagem de feeds no dashboard
 
-HORAS TRABALHADAS: 4h
+HORAS TRABALHADAS: 6h
